# pong-rust

./: CONCEITOS_RUST.md  Cargo.toml  INSTALACAO.md  LICENSE  README.md
src/: main.rs
src/game/: ball.rs  game_state.rs  mod.rs  paddle.rs
